--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sample-customer-management",
   "version": "3.0.0+20180918.1",
-  "description": "",
+  "description": "sample-customer-management",
   "dependencies": {
     "@mapbox/mapbox-gl-language": "^0.10.0",
     "@mapbox/mapbox-sdk": "^0.4.1",
